--- a/src/containers/auth/register/style.scss
+++ b/src/containers/auth/register/style.scss
@@ -36,7 +36,7 @@
     & {
       margin-top: 15px;
       .ant-breadcrumb span {
-        display: none;
+        // display: none;
       }
     }
   }
