--- a/src/containers/home/style.scss
+++ b/src/containers/home/style.scss
@@ -165,6 +165,7 @@
         cursor: pointer;
         &:hover {
           box-shadow: 1px 1px 12px #df753e;
+          text-decoration: none;
         }
         @media (max-width: 767.98px) {
           padding: 10px;
@@ -175,6 +176,8 @@
           font-weight: 500;
           text-transform: uppercase;
           font-size: 1.2em;
+          max-width: 110px;
+          word-break: break-all;
 
           @media (max-width: 767.98px) {
             font-size: 14px;
@@ -182,10 +185,10 @@
         }
 
         img {
-          height: 50px;
+          height: 56px;
 
           @media (max-width: 767.98px) {
-            height: 35px;
+            height: 42px;
             width: 40px;
           }
         }
@@ -201,8 +204,8 @@
 
       .title {
         color: white;
-        font-size: 24px;
-        font-weight: 500;
+        font-size: 22px;
+        font-weight: 600;
         letter-spacing: 0.18px;
         padding: 0;
         margin-right: 1.5rem;
@@ -247,6 +250,10 @@
         img {
           width: 100%;
           border-radius: $border-radius-base;
+          margin: 3px;
+          &:hover {
+            box-shadow: 1px 2px 7px $orange;
+          }
         }
 
         .slide-footer {
@@ -385,7 +392,7 @@
     background-color: #14171d;
     border-top: 1px solid $orange;
     font-size: 14px;
-    
+
     .collapse-wrapper {
       &__header {
         font-weight: bold;
@@ -414,15 +421,30 @@
       }
 
       &-item {
-        opacity: 0.7;
         font-weight: 400;
         font-size: 14px;
         line-height: 24px;
-        color: white;
-
+        color: $gray-500;
+        a {
+          color: $gray-500;
+          &:hover {
+            text-decoration: none;
+            color: white;
+          }
+        }
         @media (max-width: 767.98px) {
           width: 92%;
         }
+      }
+    }
+
+    .black-btn {
+      background-color: #14171d;
+      border: none;
+      padding: 0;
+      img {
+        width: 34px;
+        margin-top: -3px;
       }
     }
   }
