--- a/src/index.scss
+++ b/src/index.scss
@@ -8,7 +8,7 @@
 @import "./containers/user/style.scss";
 @import "./containers/message/style.scss";
 @import "./containers/admin/style.scss";
-@import "./containers/jwplayer/style.scss";
+@import "./containers/library/style.scss";
 @import "~swiper/swiper-bundle.min.css";
 
 body {
@@ -32,6 +32,10 @@ body {
   }
 }
 
+.ant-modal-content {
+  font-family: var(--baseHeading) !important;
+}
+
 .home_layout {
   width: 100%;
   height: 100%;
@@ -40,100 +44,6 @@ body {
 
 .ant-modal {
   font-family: "Poppins";
-}
-
-.admin-nav {
-  background-color: #2b0346 !important;
-}
-
-.main-nav {
-  text-transform: uppercase;
-  width: 100%;
-  z-index: 100;
-  background-color: black;
-  box-shadow: 0px 0px 5px $gray-2;
-  min-height: 70px;
-
-  .navbar-brand img {
-    height: 33px;
-  }
-
-  .container-nav {
-    padding: 25px 5% 7px 5%;
-  }
-  .navbar-dark .navbar-nav .nav-link {
-    color: white;
-    font-weight: 600;
-    letter-spacing: 1px;
-    &:hover {
-      color: $orange-100;
-    }
-    .ant-badge {
-      color: white;
-      padding-top: 4px;
-    }
-  }
-
-  .navbar-collapse .nav-link {
-    margin-right: 10px;
-  }
-
-  .dropdown-menu .dropdown-item .nav-link {
-    color: #333;
-  }
-
-  .anticon {
-    vertical-align: 5px !important;
-  }
-  .profile-logo {
-    flex-direction: row;
-  }
-}
-.ant-badge {
-  font-size: inherit !important;
-  .ant-badge-count {
-    height: 16px;
-    min-width: 16px;
-    border-radius: 8px;
-    right: -2px;
-    padding: 0 5px;
-    line-height: 16px;
-    top: 5px;
-  }
-}
-
-.anticon {
-  vertical-align: 2px !important;
-}
-
-.content {
-  padding: 50px;
-  min-height: calc(100vh - 150px);
-  margin: 0 auto;
-  & .summary {
-    color: white !important;
-  }
-
-  .ant-page-header {
-    padding: 0 !important;
-  }
-
-  .sun-editor-editable {
-    font-family: inherit;
-    font-size: 16px;
-    background-color: transparent;
-    padding: 0;
-    margin-bottom: 10px;
-    p,
-    ul {
-      margin-bottom: 5px;
-    }
-  }
-}
-
-.center-logo {
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .ant-dropdown-placement-bottomRight {
