--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -312,19 +312,15 @@
 .bg-linear {
   position: absolute;
   width: 100%;
-  height: 303px;
+  height: 203px;
   left: 0;
   bottom: 0;
-  background: linear-gradient(
-    180deg,
-    #ffc700 0%,
-    #f98600 0.15%,
-    rgba(0, 0, 0, 0) 60%
-  );
+  background: linear-gradient(180deg, #f98600 0%, rgba(0, 0, 0, 0) 100%);
   mix-blend-mode: normal;
   opacity: 0.49;
   transform: rotate(-180deg);
 }
+
 @media only screen and (min-width: 280px) and (max-width: 576px) {
   .not-found {
     height: 600px;
@@ -343,12 +339,7 @@
     }
   }
   .bg-linear {
-    height: 150px;
-    background: linear-gradient(
-      180deg,
-      #ffc700 0%,
-      #f98600 0.15%,
-      rgba(0, 0, 0, 0) 30%
-    );
+    height: 50px;
+    background: linear-gradient(180deg, #f98600 0%, rgba(0, 0, 0, 0) 100%);
   }
 }
