--- a/src/containers/support/style.scss
+++ b/src/containers/support/style.scss
@@ -1,13 +1,43 @@
 .support {
     background-color: #000000;
 
+    &-title {
+        margin-top: 40 px;
+        text-transform: uppercase;
+        text-align: center;
+        margin-bottom: 40px;
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 100%;
+        color: #000000;
+    }
     &-ava {
         flex-direction: column;
         display: flex;
         justify-content: center;
         align-items: center;
     }
+    .label-name {
+        font-family: Lato;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 12px;
+        line-height: 14px;
 
+        color: #2e3335;
+
+        opacity: 0.6;
+    }
+    .check-box {
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 17px;
+        display: flex;
+    }
     &-asterisk {
         color: #ef854e;
     }
@@ -16,7 +46,17 @@
         border: none !important;
         font-weight: bold;
         outline: none !important;
-        padding: 0px 15px !important;
+        padding: 8px 24px !important;
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 10px !important;
+        line-height: 30px;
+
+        display: flex;
+        align-items: center;
+        text-align: center;
+        text-transform: uppercase;
 
         &-cancel {
             background-color: transparent !important;
@@ -32,6 +72,7 @@
         &-copy {
             background-color: #ef854e !important;
             color: #ffffff;
+            width: 102px;
         }
 
         &-save {
@@ -80,10 +121,14 @@
     }
 
     &-font {
+        margin-bottom: 18px;
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: normal;
         font-size: 14px;
-        line-height: 14px;
-        font-weight: 400;
-        margin-bottom: 20px;
+        line-height: 17px;
+        letter-spacing: 0.02em;
+        color: #000000;
     }
 
     &-identify {
@@ -175,8 +220,8 @@
     }
 
     &-second {
+        padding: 60px 124px !important;
         background-color: white;
-        padding-bottom: 50px;
         z-index: 10;
         position: relative;
         box-shadow: 0px 0px 100px #eda760;
@@ -187,10 +232,6 @@
         padding-top: 20px;
         font-size: 1.2rem;
         font-weight: 600;
-    }
-
-    &-password {
-        padding: 50px 50px 0 50px;
     }
 
     &-picker {
@@ -221,6 +262,8 @@
 
     &-third {
         overflow-x: hidden;
+        text-align: right;
+        padding: 0 !important;
     }
 
     &-title {
@@ -240,6 +283,18 @@
     .ant-input,
     .form-control {
         background-color: #f6f7fa;
+    }
+    .form-control {
+        border-radius: 2px;
+    }
+    .text-input {
+        background: #fbfbfb;
+        border: 0.5px solid #cccccc;
+        box-sizing: border-box;
+        border-radius: 2px;
+        height: 35px;
+        line-height: 25px;
+        border-radius: 2px !important;
     }
 }
 
