--- a/src/containers/support/style.scss
+++ b/src/containers/support/style.scss
@@ -190,7 +190,23 @@
             display: inline-block;
         }
     }
-
+    &-inf {
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 24px;
+        text-align: center;
+        letter-spacing: 1px;
+        padding: 20px 0;
+        .infor-name {
+            font-size: 16px;
+            color: #000000;
+        }
+        .infor-address {
+            font-size: 12px;
+            color: rgba(0, 0, 0, 0.5);
+        }
+    }
     &-notify {
         &-center {
             margin-bottom: 0;
